# lab_framenet_c4_clustering_v3

./: .gitignore  pyproject.toml
params/bert-base-uncased/word/onestep_average/: best_params.json
playground/: collect_framenet.ipynb
script/: crossvalidation_random_sep.sh  crossvalidation_random_token.sh  crossvalidation_random_token0.sh  crossvalidation_sep.sh  crossvalidation_token.sh  crossvalidation_token0.sh  get_embedding.sh  preprocess_c4_token.sh  preprocess_c4_token0.sh
src/: find_best_params_onestep_clustering.py  find_best_params_twostep_clustering.py  get_embedding.py  perform_baseline_clustering.py  perform_onestep_clustering.py  sfimwe2sc.py
src/make_datasets/: base.py  collect_c4.py  collect_framenet.py  make_datasets.py  preprocess_c4.py  preprocess_c4_token.py  preprocess_c4_token0.py  preprocess_c4_token01.py  preprocess_framenet.py  utils.py
src/make_datasets/lu_classifier/: crossvalidation_lu_classifier.py  train_lu_classifier.py  util.py
src/make_datasets/lu_classifier_sep/: crossvalidation_lu_classifier.py  crossvalidation_random_lu_classifier.py  util.py
src/make_datasets/lu_classifier_token/: crossvalidation_lu_classifier.py  crossvalidation_random_lu_classifier.py  train_lu_classifier.py  util.py
src/make_datasets/lu_classifier_token0/: crossvalidation_lu_classifier.py  train_lu_classifier.py  util.py
src/make_datasets/lu_classifier_token01/: train_lu_classifier.py  util.py
src/make_datasets/lu_classifier_xml_tag/: train_lu_classifier.py  util.py
